healthcheck: support for TLS
Fixes #744
