# cluster/model.go
@@ -3,6 +3,8 @@
 package cluster
 
 import (
+	"crypto/tls"
+
 	"github.com/pkg/errors"
 	"github.com/scylladb/mermaid"
 	"github.com/scylladb/mermaid/uuid"
@@ -17,6 +19,8 @@ type Cluster struct {
 	KnownHosts      []string  `json:"-"`
 	SSHUser         string    `json:"ssh_user,omitempty"`
 	SSHIdentityFile []byte    `json:"ssh_identity_file,omitempty" db:"-"`
+	SSLUserCertFile []byte    `json:"ssl_user_cert_file,omitempty" db:"-"`
+	SSLUserKeyFile  []byte    `json:"ssl_user_key_file,omitempty" db:"-"`
 }
 
 // String returns cluster Name or ID if Name is is empty.
@@ -36,12 +40,22 @@ func (c *Cluster) Validate() error {
 		return errors.Wrap(mermaid.ErrNilPtr, "invalid filter")
 	}
 
-	var err error
-	if _, e := uuid.Parse(c.Name); e == nil {
-		err = multierr.Append(err, errors.New("name cannot be an UUID"))
+	var errs error
+	if _, err := uuid.Parse(c.Name); err == nil {
+		errs = multierr.Append(errs, errors.New("name cannot be an UUID"))
+	}
+	if len(c.SSLUserCertFile) != 0 && len(c.SSLUserKeyFile) == 0 {
+		errs = multierr.Append(errs, errors.New("missing SSL user key"))
+	}
+	if len(c.SSLUserKeyFile) != 0 && len(c.SSLUserCertFile) == 0 {
+		errs = multierr.Append(errs, errors.New("missing SSL user cert"))
+	}
+	if len(c.SSLUserCertFile) != 0 {
+		_, err := tls.X509KeyPair(c.SSLUserCertFile, c.SSLUserKeyFile)
+		errs = multierr.Append(errs, errors.Wrap(err, "invalid SSL user key pair"))
 	}
 
-	return mermaid.ErrValidate(err, "invalid cluster")
+	return mermaid.ErrValidate(errs, "invalid cluster")
 }
 
 // Filter filters Clusters.
